improvement and doc